--- a/scss/fxj/_language-selector.scss
+++ b/scss/fxj/_language-selector.scss
@@ -61,7 +61,8 @@
     }
     .language-link {
       font-weight: 300;
-      margin: .5rem 0;
+      margin-top: .5rem;
+      margin-bottom: .5rem;
     }
     .dropdown-menu {
       @include shadow();
